added name and role for discussions
