# docs/swagger.yaml
@@ -281,6 +281,10 @@ definitions:
         type: integer
       reason:
         type: string
+      sender:
+        type: string
+      sendersrole:
+        type: string
       subject_number:
         type: string
       value:
